--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@react-three/fiber": "^8.16.2",
     "@sentry/nextjs": "^7.105.0",
     "@tabler/icons-react": "^3.12.0",
+    "@tsparticles/engine": "^3.5.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.5.0",
     "@types/three": "^0.163.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
