--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.2",
     "@sentry/nextjs": "^7.105.0",
-    "@tabler/icons-react": "^3.12.0",
+    "@tabler/icons-react": "^3.14.0",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
     "@types/three": "^0.163.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cobe": "^0.6.3",
     "framer-motion": "^11.0.25",
     "lucide-react": "^0.365.0",
     "mini-svg-data-uri": "^1.4.4",
